Some more updates on the Navbar

--- a/index.html
+++ b/index.html
@@ -9,16 +9,29 @@
 </head>
 <body>
 
-    <header>
-        <h1 class="logo">Header Logo</h1>
-        <nav class="nav_links">
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="navbar">
+        <div class="container flex">
+            <h1 class="logo">Header Logo</h1>
+            <nav">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+<!--     <section class="hero">
+        <div class="content_left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
+        </div>
+
+        <div class="content_right">
+            This is a placeholder for an image
+        </div>
+    </section> -->
 
 </body>
 </html>
