Created the Hero Section

--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
         </div>
     </div>
 
-<!--     <section class="hero">
-        <div class="content_left">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
-        </div>
+    <section class="hero">
+        <div class="container flex">
+            <div class="left_content">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
+                <a href="#"><button class="btn1">Sign up</button></a>
+            </div>
 
-        <div class="content_right">
-            This is a placeholder for an image
+            <div class="right_content flex">
+                this is a placeholder for an image
+            </div>
         </div>
-    </section> -->
+    </section>
 
 </body>
 </html>
