Created the 'Some Random Info' Section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <!-- Navigation Bar -->
+
     <div class="navbar">
         <div class="container flex">
             <h1 class="logo">Header Logo</h1>
@@ -21,6 +23,8 @@
             </nav>
         </div>
     </div>
+
+    <!-- Hero Section -->
 
     <section class="hero">
         <div class="container flex">
@@ -35,6 +39,22 @@
             </div>
         </div>
     </section>
+
+    <!-- Some Random Info Section  -->
+
+    <section class="random_info">
+        <div class="container">
+            <h1 class="rand_inf_h1">Some random information.</h1>
+            <div class="cards_container">
+                <div class="card"><p id="go_below">this is some subtext under an illustration or image</p></div>
+                <div class="card"><p id="go_below">this is some subtext under an illustration or image</p></div>
+                <div class="card"><p id="go_below">this is some subtext under an illustration or image</p></div>
+                <div class="card"><p id="go_below">this is some subtext under an illustration or image</p></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Quote Section -->
 
 </body>
 </html>
