Finished The Whole Project 'Had to hurry up, that's why i didn't commit section by section'

--- a/index.html
+++ b/index.html
@@ -56,5 +56,33 @@
 
     <!-- Quote Section -->
 
+    <section class="quote">
+        <div class="container flex">
+            <h2 class="the_quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</em></h2>
+            <h3 class="quote_sign">-Thor, God of Thunder</h3>
+        </div>
+    </section>
+
+    <!-- Sign Up Section -->
+
+    <section class="sign_up">
+        <div class="container card2">
+            <div class="card2_left">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+
+            <div class="card2_right">
+                <a href="#"><button class="btn2">Sign up</button></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+
+    <footer>
+        Copyright Ⓒ The Odin Project 2021
+    </footer>
+
 </body>
 </html>
