Properly arranged the'Cards Section'

--- a/index.html
+++ b/index.html
@@ -45,11 +45,24 @@
     <section class="random_info">
         <div class="container">
             <h1 class="rand_inf_h1">Some random information.</h1>
-            <div class="cards_container">
-                <div class="card"><p id="go_below">this is some subtext under an illustration or image</p></div>
-                <div class="card"><p id="go_below">this is some subtext under an illustration or image</p></div>
-                <div class="card"><p id="go_below">this is some subtext under an illustration or image</p></div>
-                <div class="card"><p id="go_below">this is some subtext under an illustration or image</p></div>
+                <div class="thecards">
+                    <div class="cards_container">
+                        <div class="card"></div>
+                        <div class="under_cards_text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="cards_container">
+                        <div class="card"></div>
+                        <div class="under_cards_text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="cards_container">
+                        <div class="card"></div>
+                        <div class="under_cards_text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="cards_container">
+                        <div class="card"></div>
+                        <div class="under_cards_text">this is some subtext under an illustration or image</div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
